--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Beginning of Party Cards!
+PartyCards production repo...
+
+Please see PartyCards-Local repository for full readme.md and locally configured PartyCards app.
